Actualización de index

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- Meta etiquetas PWA para Apple    -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<link rel="apple-touch-icon" href="img/favicon.png" />
-		<link rel="apple-touch-startup-image" href="img/favicon.png" />
+		<link rel="apple-touch-icon" href="./img/favicon.png" />
+		<link rel="apple-touch-startup-image" href="./img/favicon.png" />
 
 
 		<!-- Configuración general PWA   -->
