Actualización del footer

--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
 				<ul id="networks">
 					<li>
 						<a href="">
-							<img src="img/twitter.png">
+							<img src="img/twitter.png" />
 						</a>
 					</li>
 					<li>
 						<a href="">
-							<img src="img/facebook.png">
+							<img src="img/facebook.png" />
 						</a>
 					</li>
 					<li>
 						<a href="">
-							<img src="img/instagram.png">
+							<img src="img/instagram.png" />
 						</a>
 					</li>
 				</ul>
