Actualización por reorganizacion

--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
 		<!-- Viewport Responsive  -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+
+		<!-- Icono de la web  -->
+			<!-- Hoja de estilos   -->
+		<link rel="shorcut icon" type="image/png" href="img/favicon.png" />
+
 		<!-- Color de la apliación  -->
 		<meta name="theme-color" content="#FB314E" />
 
 		<!-- Optimización para móvil   -->
-		<meta name="mobileOptimized" content="width" />		
-		<meta name="handheldFriendly" content="true" />		
+		<meta name="MobileOptimized" content="width" />		
+		<meta name="HandheldFriendly" content="true" />		
 
 		<!-- Meta etiquetas PWA para Apple    -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<link rel="apple-touch-icon" href="./img/favicon.png" />
-		<link rel="apple-touch-startup-image" href="./img/favicon.png" />
+		<link rel="apple-touch-icon" href="/img/favicon.png" />
+		<link rel="apple-touch-startup-image" href="/img/favicon.png" />
 
 
 		<!-- Configuración general PWA   -->
@@ -25,12 +30,12 @@
 
 
 		<!-- Hoja de estilos   -->
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 
 		<!-- Jquery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		
-		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="./js/main.js"></script>
 
 	</head>
 	<body>
@@ -132,10 +137,9 @@
 					</li>
 				</ul>
 				
-				
-			</div>
+				<div class="clearfix"></div>
 
-			<div class="clearfix"></div>
+			</div>
 
 		</footer>
 
