--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<!-- Jquery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		
-		<script type="text/javascript" src="./js/main.js"></script>
+		<script type="text/javascript" src="main.js"></script>
 
 	</head>
 	<body>
